--- a/src/BddBundle/Resources/views/Park/show.html.twig
+++ b/src/BddBundle/Resources/views/Park/show.html.twig
@@ -70,7 +70,7 @@
                                             </a>
                                         </h6>
                                         <small class="text-muted">
-                                            {{ coaster.builtCoaster.types|join(', ') }}
+                                            {{ coaster.types|join(', ') }}
                                         </small>
                                     </div>
                                 </div>
