--- a/src/BddBundle/Resources/views/Profile/ratings.html.twig
+++ b/src/BddBundle/Resources/views/Profile/ratings.html.twig
@@ -43,7 +43,7 @@
               </div>
             </td>
             <td class="hidden-xs">
-              {{ rating.coaster.builtCoaster.manufacturer.name }}
+              {{ rating.coaster.manufacturer.name }}
             </td>
             <td class="hidden-xs">
               {{ rating.coaster.openingDate is empty ? '-' : rating.coaster.openingDate|date('Y') }}
