--- a/src/BddBundle/Resources/views/Coaster/learn_more.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/learn_more.html.twig
@@ -2,57 +2,20 @@
 
 {% import "helper.html.twig" as helper %}
 
-{% set title = 'coaster_ranking.learn.title'|trans %}
+{% set title = 'title'|trans([], 'learnMoreRanking') %}
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-<div class="panel">
-  <div class="panel-body">
-    <div class="content-group-lg text-justify">
-      <h3 class="text-semibold mb-5">Captain’s ranking in brief</h3>
-      <p>
-        Captain Coaster’s ranking is based on a <b>pairwise comparison system</b>. The comparisons are deduced from
-        your Tops and Ratings. The more detailed they are, the better!
-      </p>
-      <p>
-        The Top is more precise whereas ratings are faster to use. In order to improve your influence on the ranking,
-        we recommend you to <b>rate all your ridden coasters</b>, and then to <b>order your highest rated coasters</b> in your Top.
-      </p>
-    </div>
-    <div class="content-group-lg text-justify">
-      <h3 class="text-semibold mb-5">Ranking principles</h3>
-      <p>
-        Captain Coaster’s ranking is based on a pairwise comparison system. <b>For each coaster in the ranking, we
-          compute a duel with all other coasters</b> in the database to find out which one is the best.
-      </p>
-      <p>
-        Only mutual riders can say whether they prefer one or the other as they have ridden both. This piece
-        of information can be supplied by rating both or ordering both in your Top. <b>The duel is won by the
-          coaster getting a majority of positive comparisons.</b><br/>
-        Then the results of these duels are computed to designate the winner. If a coaster wins
-        all its duels, it will be number 1. Another losing against n°1 and winning against all others
-        will be the number 2, etc. The score reflects this proportion.
-      </p>
-      <p>
-        The algorithm is built to <b>reflect the real tendency and tastes of all riders</b> involved.<br/>
-        First there is no mass effect: the amount of ratings for a coaster has no influence. It is not
-        a popularity contest! Rare coasters have the same opportunity to be well ranked than most popular.
-      </p>
-      <p>
-        For your information, ranking 1 coaster brings 0 comparisons, which means no influence at all.
-        Ranking 10 coasters brings 45 comparisons, ranking 20 coasters brings 190 comparisons, etc.
-      </p>
-      <p>
-        As a consequence the more you ride (and then rate) coasters, the more comparisons you bring and
-        therefore the more you weigh on the ranking. This encourages you, firstly to rate all your ridden coasters,
-        secondly to ride more and more coasters!
-      </p>
-      <p>
-        Please note that <b>a single person cannot disrupt the whole ranking.</b> Everyone has influence,
-        but one person alone with an antagonistic point of view on a coaster will not change its score
-        by 100%, it’s always the majority point of view that matters.
-      </p>
+  <div class="panel">
+    <div class="panel-body">
+      <div class="content-group-lg text-justify">
+        <h3 class="text-semibold mb-5">{{ 'brief.title'|trans([], 'learnMoreRanking') }}</h3>
+        {{ 'brief.text'|trans([], 'learnMoreRanking')|raw }}
+      </div>
+      <div class="content-group-lg text-justify">
+        <h3 class="text-semibold mb-5">{{ 'principles.title'|trans([], 'learnMoreRanking') }}</h3>
+        {{ 'principles.text'|trans([], 'learnMoreRanking')|raw }}
+      </div>
     </div>
   </div>
-</div>
 {% endblock %}
