--- a/src/BddBundle/Resources/views/Coaster/show.html.twig
+++ b/src/BddBundle/Resources/views/Coaster/show.html.twig
@@ -133,9 +133,7 @@
             <div class="list-group-item">
               <label class="control-label no-margin text-semibold">{{ 'coaster.infos.park'|trans }}:</label>
               <div class="pull-right">
-                <a href="{{ path('park_show', {'slug': coaster.park.slug}) }}">
-                  {{ coaster.park.name }}
-                </a>
+                <a href="{{ path('park_show', {'slug': coaster.park.slug}) }}">{{ coaster.park.name }}</a>
               </div>
             </div>
           {% endif %}
@@ -145,12 +143,10 @@
               <div class="pull-right">{{ coaster.park.country.name|trans([], 'database') }}</div>
             </div>
           {% endif %}
-          {% if coaster.manufacturer %}
-            <div class="list-group-item">
-              <label class="control-label no-margin text-semibold">{{ 'coaster.infos.manufacturer'|trans }}:</label>
-              <div class="pull-right">{{ coaster.manufacturer.name }}</div>
-            </div>
-          {% endif %}
+          <div class="list-group-item">
+            <label class="control-label no-margin text-semibold">{{ 'coaster.infos.manufacturer'|trans }}:</label>
+            <div class="pull-right">{{ coaster.manufacturer.name|default('data.unknown'|trans([], 'database')) }}</div>
+          </div>
           {% if coaster.materialType %}
             <div class="list-group-item">
               <label class="control-label no-margin text-semibold">{{ 'coaster.infos.materialType'|trans }}:</label>
@@ -182,26 +178,19 @@
               </div>
             </div>
           {% endif %}
-          {% if coaster.restraint %}
-            <div class="list-group-item">
-              <label class="control-label no-margin text-semibold">{{ 'coaster.infos.restraint'|trans }}
-                :</label>
-              <div class="pull-right">{{ coaster.restraint.name|trans([], 'database') }}</div>
-            </div>
-          {% endif %}
+          <div class="list-group-item">
+            <label class="control-label no-margin text-semibold">{{ 'coaster.infos.restraint'|trans }}:</label>
+            <div class="pull-right">{{ coaster.restraint.name|default('data.unknown')|trans([], 'database') }}</div>
+          </div>
           {% if coaster.openingDate %}
             <div class="list-group-item">
-              <label class="control-label no-margin text-semibold">{{ 'coaster.infos.opening'|trans }}
-                :</label>
-              <div class="pull-right">
-                {{ helper.displayDate(coaster.openingDate) }}
-              </div>
+              <label class="control-label no-margin text-semibold">{{ 'coaster.infos.opening'|trans }}:</label>
+              <div class="pull-right">{{ helper.displayDate(coaster.openingDate) }}</div>
             </div>
           {% endif %}
           {% if coaster.closingDate %}
             <div class="list-group-item">
-              <label class="control-label no-margin text-semibold">{{ 'coaster.infos.closing'|trans }}
-                :</label>
+              <label class="control-label no-margin text-semibold">{{ 'coaster.infos.closing'|trans }}:</label>
               <div class="pull-right">
                 {{ helper.displayDate(coaster.closingDate) }}
               </div>
