add filter for ranking

--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -11,7 +11,7 @@
             </a>
           </li>
           <li>
-            <a href="{{ path('coaster_ranking') }}">
+            <a href="{{ path('ranking_index') }}">
               <i class="icon-trophy2"></i> <span>{{ 'sidebar.ranking'|trans }}</span>
             </a>
           </li>
