--- a/src/BddBundle/Resources/views/Liste/show.html.twig
+++ b/src/BddBundle/Resources/views/Liste/show.html.twig
@@ -51,15 +51,14 @@
 
           <div class="media-body">
             <h2 class="media-heading text-semibold">
-              {{ listeCoaster.position }} -
-              <a style="color:#333;"
-                 href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">{{ coaster.name }}
+              <a style="color:#333;" href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
+                {{ listeCoaster.position }}&nbsp;-&nbsp;{{ coaster.name }}
               </a>
             </h2>
 
             <ul class="list-inline list-inline-separate text-muted mb-10">
               <li>{{ coaster.manufacturer.name }}</li>
-              <li>{{ coaster.types|join(', ') }}</li>
+              {% if coaster.maTerialType %}<li>{{ coaster.materialType }}</li>{% endif %}
               <li>
                 <a class="text-muted" href="{{ path('park_show', {'slug': coaster.park.slug}) }}">
                   {{ coaster.park.name }}, {{ coaster.park.country.name|trans([], 'database') }}
