--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -199,3 +199,14 @@
     </div>
   </div>
 {% endblock %}
+
+{% block javascripts %}
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js', {scope: '/'}).then(function() {
+        console.log('Service Worker Registered');
+      }).catch(function(e) {
+        console.log('Error during Service Worker registration : ', e);
+      })}
+  </script>
+{% endblock %}
