--- a/src/BddBundle/Resources/views/Park/show.html.twig
+++ b/src/BddBundle/Resources/views/Park/show.html.twig
@@ -5,120 +5,123 @@
 {% block title %}{{ title }} - {{ subTitle }}{% endblock %}
 
 {% block body %}
-    <div class="row">
-        <div class="col-sm-3">
-            <!-- park stats -->
-            <div class="panel panel-body">
-                <div class="row text-center">
-                    <div class="col-xs-6">
-                        <p><i class="icon-location3 icon-2x display-inline-block text-info"></i></p>
-                        <h5 class="text-semibold no-margin">
-                            {{ park.openedCoasters|length }}
-                        </h5>
-                        <span class="text-muted text-size-small">
+  <div class="row">
+    <div class="col-sm-3">
+      <!-- park stats -->
+      <div class="panel panel-body">
+        <div class="row text-center">
+          <div class="col-xs-6">
+            <p><i class="icon-location3 icon-2x display-inline-block text-info"></i></p>
+            <h5 class="text-semibold no-margin">
+              {{ park.openedCoasters|length }}
+            </h5>
+            <span class="text-muted text-size-small">
                             {{ 'park.opened_coasters'|transchoice(park.openedCoasters|length) }}
                         </span>
-                    </div>
-                    <div class="col-xs-6">
-                        <p><i class="icon-puzzle2 icon-2x display-inline-block text-warning"></i></p>
-                        <h5 class="text-semibold no-margin">
-                            {{ park.kiddies|length }}
-                        </h5>
-                        <span class="text-muted text-size-small">
+          </div>
+          <div class="col-xs-6">
+            <p><i class="icon-puzzle2 icon-2x display-inline-block text-warning"></i></p>
+            <h5 class="text-semibold no-margin">
+              {{ park.kiddies|length }}
+            </h5>
+            <span class="text-muted text-size-small">
                             {{ 'park.kiddies'|transchoice(park.kiddies|length) }}
                         </span>
-                    </div>
-                </div>
-            </div>
-            <!-- /park stats -->
-            <!-- coaster location -->
-            {% if park.latitude and park.longitude %}
-                <div class="panel panel-flat">
-                    <div class="panel-heading">
-                        <h5 class="panel-title">{{ 'coaster.location'|trans }}</h5>
-                    </div>
-                    <div class="panel-body">
-                        <div id="map-coaster" class="map-container" style="height:250px;"></div>
-                    </div>
-                </div>
-            {% endif %}
-            <!-- /coaster location -->
+          </div>
         </div>
-        <div class="col-sm-9">
-            <div class="row">
-                {% for coaster in park.coasters %}
-                    <div class="col-sm-4">
-                        <div class="thumbnail border-bottom-xlg border-bottom-{{ coaster.status.type }}">
-                            <div class="thumb">
-                                <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
-                                    <img {% if coaster.images|length > 0 %}
-                                      {% set image = random(coaster.images) %}
-                                        src="{{ image.path | imagine_filter('coaster_park_show') }}"
-                                    {% else %}
-                                        src="{{ asset('images/nophoto.png') }}"
-                                    {% endif %}
-                                            class="img-responsive img-rounded" alt="{{ coaster.name }}">
-                                </a>
-                            </div>
-                            <div class="caption text-center">
-                                <div class="content-group-sm media">
-                                    <div class="media-body">
-                                        <h6 class="text-semibold no-margin">
-                                            <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}"
-                                               class="text-default">
-                                                {{ coaster.name }}
-                                            </a>
-                                        </h6>
-                                        <small class="text-muted">
-                                            {{ coaster.types|join(', ') }}
-                                        </small>
-                                    </div>
-                                </div>
-                                {% if coaster.isRateable %}
-                                    {% if is_granted('ROLE_USER') %}
-                                        <div class="rating-coaster"
-                                             data-coaster="{{ coaster.id }}"
-                                             data-rateit-value="{{ coaster.userRating(app.user).value|default(0) }}"
-                                             style="font-size: 22px;"></div>
-                                    {% else %}
-                                        <p class="text-muted content-group-sm">
-                                            {{ 'coaster.rating.mustlogin'|trans }}
-                                        </p>
-                                        <a href="{{ path('hwi_oauth_connect') }}">{{ 'coaster.rating.login'|trans }}</a>
-                                    {% endif %}
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
+      </div>
+      <!-- /park stats -->
+      <!-- coaster location -->
+      {% if park.latitude and park.longitude %}
+        <div class="panel panel-flat">
+          <div class="panel-heading">
+            <h5 class="panel-title">{{ 'coaster.location'|trans }}</h5>
+          </div>
+          <div class="panel-body">
+            <div id="map-coaster" class="map-container" style="height:250px;"></div>
+          </div>
         </div>
+      {% endif %}
+      <!-- /coaster location -->
     </div>
+    <div class="col-sm-9">
+      <div class="row">
+        {% for coaster in park.coasters %}
+          <div class="col-sm-4">
+            <div class="thumbnail border-bottom-xlg border-bottom-{{ coaster.status.type }}" style="height:390px;">
+              <div class="thumb">
+                <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
+                  <img {% if coaster.images|length > 0 %}
+                    {% set image = random(coaster.images) %}
+                    src="{{ image.path | imagine_filter('coaster_park_show') }}"
+                  {% else %}
+                    src="{{ asset('images/nophoto.png') }}"
+                  {% endif %}
+                      class="img-responsive img-rounded" alt="{{ coaster.name }}">
+                </a>
+              </div>
+              <div class="caption text-center">
+                <div class="content-group-sm media">
+                  <div class="media-body">
+                    <h6 class="text-semibold no-margin">
+                      <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}" class="text-default">
+                        {{ coaster.name }}
+                      </a>
+                    </h6>
+                    <ul class="list-inline list-inline-separate text-muted mb-10">
+                      {% if coaster.seatingType %}
+                        <li>{{ coaster.seatingType }}</li>
+                      {% else %}
+                        <li>&nbsp;</li>
+                      {% endif %}
+                    </ul>
+                  </div>
+                </div>
+                {% if coaster.isRateable %}
+                  {% if is_granted('ROLE_USER') %}
+                    <div class="rating-coaster"
+                         data-coaster="{{ coaster.id }}"
+                         data-rateit-value="{{ coaster.userRating(app.user).value|default(0) }}"
+                         style="font-size: 22px;"></div>
+                  {% else %}
+                    <p class="text-muted content-group-sm">
+                      {{ 'coaster.rating.mustlogin'|trans }}
+                    </p>
+                    <a href="{{ path('hwi_oauth_connect') }}">{{ 'coaster.rating.login'|trans }}</a>
+                  {% endif %}
+                {% endif %}
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
 {% endblock %}
 
 {% block javascripts %}
-    {% if park.latitude and park.longitude %}
-        <script>
-            function initMap() {
-                var uluru = {lat: {{ park.latitude }}, lng: {{ park.longitude }}};
-                var map = new google.maps.Map(document.getElementById('map-coaster'), {
-                    zoom: 14,
-                    center: uluru
-                });
-                var marker = new google.maps.Marker({
-                    position: uluru,
-                    map: map
-                });
-            }
-        </script>
-        <script async defer
-                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9GhjdRtYf1BNtxx-rLJJwNl2n2CDUev4&callback=initMap">
-        </script>
-    {% endif %}
-    <script src="{{ asset('js/plugins/rateit/jquery.rateit.min.js') }}"></script>
-    <script src="{{ asset('js/pages/rating.js') }}"></script>
+  {% if park.latitude and park.longitude %}
+    <script>
+      function initMap() {
+        var uluru = {lat: {{ park.latitude }}, lng: {{ park.longitude }}};
+        var map = new google.maps.Map(document.getElementById('map-coaster'), {
+          zoom: 14,
+          center: uluru,
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map,
+        });
+      }
+    </script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9GhjdRtYf1BNtxx-rLJJwNl2n2CDUev4&callback=initMap">
+    </script>
+  {% endif %}
+  <script src="{{ asset('js/plugins/rateit/jquery.rateit.min.js') }}"></script>
+  <script src="{{ asset('js/pages/rating.js') }}"></script>
 {% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('js/plugins/rateit/rateit.css') }}">
+  <link rel="stylesheet" href="{{ asset('js/plugins/rateit/rateit.css') }}">
 {% endblock %}
