--- a/src/BddBundle/Resources/views/Park/show.html.twig
+++ b/src/BddBundle/Resources/views/Park/show.html.twig
@@ -15,18 +15,18 @@
             <h5 class="text-semibold no-margin">
               {{ park.openedCoasters|length }}
             </h5>
-            <span class="text-muted text-size-small">
-                            {{ 'park.opened_coasters'|transchoice(park.openedCoasters|length) }}
-                        </span>
+            <div class="text-muted text-size-small">
+              {{ 'park.opened_coasters'|transchoice(park.openedCoasters|length) }}
+            </div>
           </div>
           <div class="col-xs-6">
             <p><i class="icon-puzzle2 icon-2x display-inline-block text-warning"></i></p>
             <h5 class="text-semibold no-margin">
               {{ park.kiddies|length }}
             </h5>
-            <span class="text-muted text-size-small">
-                            {{ 'park.kiddies'|transchoice(park.kiddies|length) }}
-                        </span>
+            <div class="text-muted text-size-small">
+              {{ 'park.kiddies'|transchoice(park.kiddies|length) }}
+            </div>
           </div>
         </div>
       </div>
@@ -48,7 +48,7 @@
       <div class="row">
         {% for coaster in park.coasters %}
           <div class="col-sm-4">
-            <div class="thumbnail border-bottom-xlg border-bottom-{{ coaster.status.type }}" style="height:390px;">
+            <div class="thumbnail border-bottom-xlg border-bottom-{{ coaster.status.type }}" style="height:350px;">
               <div class="thumb">
                 <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
                   <img {% if coaster.images|length > 0 %}
@@ -71,8 +71,6 @@
                     <ul class="list-inline list-inline-separate text-muted mb-10">
                       {% if coaster.seatingType %}
                         <li>{{ coaster.seatingType }}</li>
-                      {% else %}
-                        <li>&nbsp;</li>
                       {% endif %}
                     </ul>
                   </div>
