--- a/src/BddBundle/Resources/views/Ranking/results.html.twig
+++ b/src/BddBundle/Resources/views/Ranking/results.html.twig
@@ -33,7 +33,7 @@
           <li>{{ coaster.park.country.name|trans([], 'database') }}</li>
         </ul>
         <ul class="list-inline list-inline-separate text-muted mb-5">
-          <li>{{ coaster.manufacturer.name }}</li>
+          {% if coaster.manufacturer %}<li>{{ coaster.manufacturer.name }}</li>{% endif %}
           {% if coaster.materialType %}<li>{{ coaster.materialType }}</li>{% endif %}
           {% if coaster.seatingType %}<li>{{ coaster.seatingType }}</li>{% endif %}
         </ul>
