--- a/src/BddBundle/Resources/views/Ranking/results.html.twig
+++ b/src/BddBundle/Resources/views/Ranking/results.html.twig
@@ -47,6 +47,10 @@
           </span>
       </div>
     </li>
+  {% else %}
+    <li class="media panel panel-body stack-media-on-mobile">
+      <h5>{{ 'coaster_ranking.no_results'|trans }}</h5>
+    </li>
   {% endfor %}
 </ul>
 {{ knp_pagination_render(coasters) }}
