--- a/app/Resources/views/page_header.html.twig
+++ b/app/Resources/views/page_header.html.twig
@@ -1,9 +1,7 @@
 <div class="page-header page-header-default">
   <div class="page-header-content">
     <div class="page-title{% if hideTitle|default(false) == true %} hidden-xs{% endif %}">
-      <h1>
-        <span class="text-semibold">{{ title }}</span>{% if subTitle %} • {{ subTitle }}{% endif %}
-      </h1>
+      <h1>{{ title }}{% if subTitle %} • {{ subTitle }}{% endif %}</h1>
     </div>
     <div class="heading-elements {% if showSearchBar|default(true) == true %}visible-elements{% endif %}">
       <form class="heading-form" action="#">
