--- a/src/BddBundle/Resources/views/Review/form.html.twig
+++ b/src/BddBundle/Resources/views/Review/form.html.twig
@@ -4,65 +4,62 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/plugins/rateit/jquery.rateit.min.js') }}"></script>
-    <script type="text/javascript">
-        $('document').ready(function () {
-            $('.rating-coaster').rateit(
-                {max: 5, step: 0.5, backingfld: '#review_value', resetable: false, mode: 'font'}
-            );
-        });
-    </script>
-    <script type="text/javascript" src="{{ asset('js/plugins/select2.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('js/pages/form_select2.js') }}"></script>
-    <script type="text/javascript">
-        $('select').select2({
-            maximumSelectionLength: 3
-        });
-    </script>
+  <script src="{{ asset('js/plugins/rateit/jquery.rateit.min.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/plugins/select2.min.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/pages/form_select2.js') }}"></script>
+  <script src="{{ asset('js/plugins/bootstrap-datepicker/bootstrap-datepicker.min.js') }}"></script>
+  <script type="text/javascript">
+    $('document').ready(function() {
+      $('.rating-coaster').rateit({max: 5, step: 0.5, backingfld: '#review_value', resetable: false, mode: 'font'});
+      $('select').select2({maximumSelectionLength: 3});
+      $('.datepicker').datepicker({format: 'yyyy-mm-dd'});
+    });
+  </script>
 {% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('js/plugins/rateit/rateit.css') }}">
+  <link rel="stylesheet" href="{{ asset('js/plugins/rateit/rateit.css') }}">
+  <link rel="stylesheet" href="{{ asset('js/plugins/bootstrap-datepicker/bootstrap-datepicker.min.css') }}">
 {% endblock %}
 
 {% block body %}
-    <div class="panel panel-flat">
-        <div class="panel-heading">
-            <h2 class="panel-title">{{ 'review.share'|trans }}</h2>
-        </div>
-
-        <div class="panel-body">
-
-            {{ form_start(form) }}
-            <div class="form-group">
-                <label class="control-label is-visible">{{ 'review.value'|trans }}</label>
-                <span class="text-danger">*</span>
-                <br>
-                {{ form_widget(form.value) }}
-                <div class="rating-coaster" data-rateit-backingfld="#review_value" style="font-size: 22px;"></div>
-            </div>
-
-            <div class="form-group">
-                {{ form_label(form.pros, "", {'label_attr': {'class': 'control-label'}}) }}
-                {{ form_widget(form.pros) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.cons, "", {'label_attr': {'class': 'control-label'}}) }}
-                {{ form_widget(form.cons) }}
-            </div>
-
-            <div class="form-group">
-                {{ form_label(form.review, "", {'label_attr': {'class': 'control-label'}}) }}
-                {{ form_widget(form.review, {'attr': {'class': 'form-control', 'cols': '5', 'rows': '5'}}) }}
-            </div>
-            <div class="text-right">
-                <button type="submit" class="btn btn-primary">
-                    {{ 'review.send'|trans }}
-                    <i class="icon-arrow-right14 position-right"></i>
-                </button>
-            </div>
-            {{ form_rest(form) }}
-            {{ form_end(form) }}
-        </div>
+  <div class="panel panel-flat">
+    <div class="panel-heading">
+      <h2 class="panel-title">{{ 'review.share'|trans }}</h2>
     </div>
+    <div class="panel-body">
+      {{ form_start(form) }}
+      <div class="form-group">
+        <label class="control-label is-visible">{{ 'review.value'|trans }}</label>
+        <span class="text-danger">*</span>
+        <br>
+        {{ form_widget(form.value) }}
+        <div class="rating-coaster" data-rateit-backingfld="#review_value" style="font-size: 22px;"></div>
+      </div>
+      <div class="form-group">
+        {{ form_label(form.riddenAt, "", {'label_attr': {'class': 'control-label'}}) }}
+        {{ form_widget(form.riddenAt, {'attr': {'class': 'form-control datepicker'}}) }}
+      </div>
+      <div class="form-group">
+        {{ form_label(form.pros, "", {'label_attr': {'class': 'control-label'}}) }}
+        {{ form_widget(form.pros) }}
+      </div>
+      <div class="form-group">
+        {{ form_label(form.cons, "", {'label_attr': {'class': 'control-label'}}) }}
+        {{ form_widget(form.cons) }}
+      </div>
+      <div class="form-group">
+        {{ form_label(form.review, "", {'label_attr': {'class': 'control-label'}}) }}
+        {{ form_widget(form.review, {'attr': {'class': 'form-control', 'cols': '5', 'rows': '5'}}) }}
+      </div>
+      <div class="text-right">
+        <button type="submit" class="btn btn-primary">
+          {{ 'review.send'|trans }}
+          <i class="icon-arrow-right14 position-right"></i>
+        </button>
+      </div>
+      {{ form_rest(form) }}
+      {{ form_end(form) }}
+    </div>
+  </div>
 {% endblock %}
