add filters for ranking

--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -54,7 +54,7 @@
           <div class="col-xs-3">
             <p><i class="icon-podium icon-2x display-inline-block text-warning"></i></p>
             <h5 class="text-semibold no-margin">
-              <a href="{{ path('top_list') }}">{{ stats.nb_tops }}</a>
+              <a href="{{ path('top_list') }}">{{ stats.nb_in_tops }}</a>
             </h5>
             <span class="text-muted text-size-small">{{ 'index.stats.listes'|trans }}</span>
           </div>
