--- a/src/Resources/views/Review/form.html.twig
+++ b/src/Resources/views/Review/form.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "base.html.twig" %}
 {% set title = 'Avis sur ' ~ coaster.name %}
 {% set subTitle = '' %}
 {% block title %}{{ title }}{% endblock %}
